WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115617
REGRESSION (
r149439
): Video turns blank upon entering full screen for the first time
https://bugs.webkit.org/show_bug.cgi?id=115617
Summary
REGRESSION (r149439): Video turns blank upon entering full screen for the fir...
mitz
Reported
2013-05-05 16:18:21 PDT
To reproduce: navigate to the URL or any other page with a video element and standard controls. When the video starts playing, click the full screen arrows in the controls. The video turns blank as it fills up the screen. This was caused by <
http://trac.webkit.org/r149439
>, the fix for
bug 115433
.
Attachments
Patch
(1.86 KB, patch)
2013-05-09 15:40 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-05-05 16:19:12 PDT
<
rdar://problem/13812531
>
Jer Noble
Comment 2
2013-05-09 15:40:05 PDT
Created
attachment 201293
[details]
Patch
WebKit Commit Bot
Comment 3
2013-05-10 10:20:17 PDT
Comment on
attachment 201293
[details]
Patch Clearing flags on attachment: 201293 Committed
r149885
: <
http://trac.webkit.org/changeset/149885
>
WebKit Commit Bot
Comment 4
2013-05-10 10:20:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug