REGRESSION (r149439): Video turns blank upon entering full screen for the first time https://bugs.webkit.org/show_bug.cgi?id=115617

Reviewed by Eric Carlson.

Partially revert the change introduced in r149439 for OS X 10.8 and previous. On these
platforms, create a window with a NSZeroSize initial frame, which fixes the "blank"
first-full screen behavior.

* UIProcess/API/mac/WKView.mm:
(-[WKView createFullScreenWindow]):


Canonical link: https://commits.webkit.org/134342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149885 268f45cc-cd09-0410-ab3c-d52691b4dbfc